--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -80,7 +80,9 @@
 				border: none !important;
 				box-shadow: none !important;
 			}
-
+			.transparent {
+				background: transparent;
+			}
 			.dark-gradient {
 				background-image: linear-gradient(to right, #434343 0%, black 100%);
 			}
@@ -93,6 +95,7 @@
 				<!-- INTRODUCTION -->
 				<section>
 					<h3>Bootstrap 4</h3>
+					<img class="borderless transparent" src="img/bootstrap-logo.png" style="width: 30vw"/>
 					<p class="colored">Fundamentals</p>
 					<p><small>Curated by Vasilis Tzelepopoulos</small></p>
 					
