--- a/javascript/intermediate.html
+++ b/javascript/intermediate.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>TechTalentSchool | Intermediate JavaScript </title>
     <meta name="author" content="Kostas Minaidis">
+    <meta name="author" content="Vasilis Tzelepopoulos">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
