--- a/javascript/node/node.html
+++ b/javascript/node/node.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="author" content="Kostas Minaidis, Vasilis Tzelepopoulos">
+    <meta name="author" content="Kostas Minaidis">
+    <meta name="author" content="Vasilis Tzelepopoulos">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
